--- a/index.html
+++ b/index.html
@@ -1,43 +1,114 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <title>Mi Portfolio</title>
-    </head>
+<head>
+  <title>Mi portafolio personal</title>
+  <link href="./style.css" rel="stylesheet">
+</head>
 
-    <body>
-        <header>
-            <h1>Mi Nombre</h1>
-            <h2>Mi profesión</h2>
-        </header>
-        <main>
-            <section>
-              <h2>Acerca de mí</h2>
-              <p>
-                Como desarrollador web junior, fusiono mi pasión por el diseño y la
-                programación para crear experiencias web excepcionales. Me esfuerzo por
-                cada línea de código y cada detalle de diseño para asegurarme de que mis
-                sitios web sean visualmente atractivos, funcionales y accesibles para
-                todos. Estoy comprometido a seguir aprendiendo y mejorando continuamente
-                mientras busco oportunidades desafiantes que amplíen mi experiencia en el
-                desarrollo web.
-              </p>
-            </section>
-            <section>
-                <h2>Habilidades</h2>
-                <ol>
-                  <li>HTML</li>
-                  <li>CSS</li>
-                  <li>JavaScript</li>
-                  <li>Git</li>
-                  <li>Metodologías ágiles</li>
-                </ol>
-            </section>
-        </main>
-          
-        <footer>
-
-        </footer>
-    </body>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <a class="menu-item" href="#acerca-de-mi">Acerca de mí</a>
+        <a class="menu-item" href="#habilidades">Habilidades</a>
+        <a class="menu-item" href="#experiencia">Experiencia</a>
+        <a class="menu-item" href="#proyectos">Proyectos</a>
+        <a class="menu-item" href="#contacto">Contacto</a>
+      </ul>
+    </nav>
+    <h1>Mi nombre</h1>
+    <h2>Mi profesión</h2>
+  </header>
+  <main>
+    <section id="acerca-de-mi">
+      <h2>Acerca de mí</h2>
+      <p>
+        Como desarrollador web junior, fusiono mi pasión por el diseño y la
+        programación para crear experiencias web excepcionales. Me esfuerzo
+        por cada línea de código y cada detalle de diseño para asegurarme de
+        que mis sitios web sean visualmente atractivos, funcionales y
+        accesibles para todos. Estoy comprometido a seguir aprendiendo y
+        mejorando continuamente mientras busco oportunidades desafiantes que
+        amplíen mi experiencia en el desarrollo web.
+      </p>
+      <!--En esta seccion incorpore una imagen de perfil
+      <img src="./img/Mauro-Gavilan-PPY.jpg" width="300">-->
+    </section>
+    <section id="habilidades">
+      <h2>Habilidades</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Git</li>
+        <li>Metodologías ágiles</li>
+      </ul>
+    </section>
+    <section id="experiencia">
+      <h2>Experiencia</h2>
+      <ul>
+        <li>
+          <b>Empresa X</b> (2022-presente)
+          <ul>
+            <li>Desarrollador web junior</li>
+            <li>
+              Responsable del desarrollo y mantenimiento de la página web de
+              la empresa
+            </li>
+          </ul>
+        </li>
+        <li>
+          <strong>Empresa Y</strong> (2020-2022)
+          <ul>
+            <li>Diseñador web</li>
+            <li>
+              Responsable del diseño y maquetación de la página web de la
+              empresa
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section id="proyectos">
+      <h2>Proyectos</h2>
+      <ul>
+        <li>
+          <a href="https://www.nytimes.com/games/wordle/index.html">Clon de Wordle</a>
+          <p>Descripción del proyecto 1</p>
+        </li>
+        <li>
+          <a href="https://www.nytimes.com/games/wordle/index.html">Proyecto 2</a>
+          <p>Descripción del proyecto 2</p>
+        </li>
+      </ul>
+    </section>
+    <section id="contacto">
+      <h2>Contacto</h2>
+      <ul>
+        <li>Email: ejemplo@correo.com</li>
+        <li>Teléfono: 123-456-7890</li>
+        <li>
+          Redes Sociales:
+          <ul>
+            <li>
+              <a href="https://www.facebook.com/tucuenta">Facebook</a>
+            </li>
+            <li>
+              <a href="https://twitter.com/tucuenta">Twitter</a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/tucuenta">LinkedIn</a>
+            </li>
+            <!-- Agrega más redes sociales si lo deseas -->
+          </ul>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>Copyright &copy; 2024</p>
+  </footer>
+</body>
 
 </html>
